Adicionandos estilos da table e o scroll.

--- a/index.html
+++ b/index.html
@@ -34,40 +34,135 @@
             </thead>
             <tbody>
                <tr>
-                  <td>
+                  <td class="user">
                      <img src="https://github.com/maykbrito.png" alt="Imagem de Mayk">
                      <a href="https://github.com/maykbrito">
                         <p>Mayk Brito</p>
                         <span>/maykbrito</span>
                      </a>
                   </td>
-                  <td>
+                  <td class="repositories">
                      123
                   </td>
-                  <td>
+                  <td class="followers">
                      1234
                   </td>
                   <td>
-                     <button>Remover</button>
+                     <button class="remove">Remover</button>
                   </td>
                </tr>
 
                <tr>
-                  <td>
+                  <td class="user">
                      <img src="https://github.com/diego3g.png" alt="Imagem de Mayk">
                      <a href="https://github.com/maykbrito">
                         <p>Diego Fernandes</p>
                         <span>/diego3g</span>
                      </a>
                   </td>
-                  <td>
+                  <td class="repositories">
                      125
                   </td>
-                  <td>
+                  <td class="followers">
                      1230
                   </td>
                   <td>
-                     <button>Remover</button>
+                     <button class="remove">Remover</button>
+                  </td>
+               </tr>
+
+               <tr>
+                  <td class="user">
+                     <img src="https://github.com/maykbrito.png" alt="Imagem de Mayk">
+                     <a href="https://github.com/maykbrito">
+                        <p>Mayk Brito</p>
+                        <span>/maykbrito</span>
+                     </a>
+                  </td>
+                  <td class="repositories">
+                     123
+                  </td>
+                  <td class="followers">
+                     1234
+                  </td>
+                  <td>
+                     <button class="remove">Remover</button>
+                  </td>
+               </tr>
+
+               <tr>
+                  <td class="user">
+                     <img src="https://github.com/diego3g.png" alt="Imagem de Mayk">
+                     <a href="https://github.com/maykbrito">
+                        <p>Diego Fernandes</p>
+                        <span>/diego3g</span>
+                     </a>
+                  </td>
+                  <td class="repositories">
+                     125
+                  </td>
+                  <td class="followers">
+                     1230
+                  </td>
+                  <td>
+                     <button class="remove">Remover</button>
+                  </td>
+               </tr>
+
+               <tr>
+                  <td class="user">
+                     <img src="https://github.com/maykbrito.png" alt="Imagem de Mayk">
+                     <a href="https://github.com/maykbrito">
+                        <p>Mayk Brito</p>
+                        <span>/maykbrito</span>
+                     </a>
+                  </td>
+                  <td class="repositories">
+                     123
+                  </td>
+                  <td class="followers">
+                     1234
+                  </td>
+                  <td>
+                     <button class="remove">Remover</button>
+                  </td>
+               </tr>
+
+               <tr>
+                  <td class="user">
+                     <img src="https://github.com/maykbrito.png" alt="Imagem de Mayk">
+                     <a href="https://github.com/maykbrito">
+                        <p>Mayk Brito</p>
+                        <span>/maykbrito</span>
+                     </a>
+                  </td>
+                  <td class="repositories">
+                     123
+                  </td>
+                  <td class="followers">
+                     1234
+                  </td>
+                  <td>
+                     <button class="remove">Remover</button>
+                  </td>
+               </tr>
+
+               <tr>
+                  <td class="user">
+                     <img src="https://github.com/diego3g.png" alt="Imagem de Mayk">
+                     <a href="https://github.com/maykbrito">
+                        <p>Diego Fernandes</p>
+                        <span>/diego3g</span>
+                     </a>
+                  </td>
+                  <td class="repositories">
+                     125
+                  </td>
+                  <td class="followers">
+                     1230
+                  </td>
+                  <td>
+                     <button class="remove">Remover</button>
                   </td>
                </tr>
             </tbody>
