Criação das funcionalidades do gtiFav.

--- a/index.html
+++ b/index.html
@@ -37,55 +37,11 @@
                   <th class="otherCollumns">Ação</th>
                </tr>
             </thead>
-            <tbody id="listFavorites">
-               <tr>
-                  <td class="user firstCollumn">
-                     <img src="https://github.com/maykbrito.png" alt="Imagem de Mayk">
-                     <a href="https://github.com/maykbrito">
-                        <p>Mayk Brito</p>
-                        <span>/maykbrito</span>
-                     </a>
-                  </td>
-                  <td class="repositories otherCollumns">
-                     123
-                  </td>
-                  <td class="followers otherCollumns">
-                     1234
-                  </td>
-                  <td class="otherCollumns">
-                     <button class="remove">Remover</button>
-                  </td>
-               </tr>
-
-               <tr>
-                  <td class="user firstCollumn">
-                     <img src="https://github.com/diego3g.png" alt="Imagem de Mayk">
-                     <a href="https://github.com/maykbrito">
-                        <p>Diego Fernandes</p>
-                        <span>/diego3g</span>
-                     </a>
-                  </td>
-                  <td class="repositories otherCollumns">
-                     125
-                  </td>
-                  <td class="followers otherCollumns">
-                     1230
-                  </td>
-                  <td class="otherCollumns">
-                     <button class="remove">Remover</button>
-                  </td>
-               </tr>
-            </tbody>
-            <!-- <tbody id="emptyList">
-               <tr>
-                  <td>
-                     <img src="./assets/starTable.svg" alt="Estrela">
-                     <h1>Nenhum favorito ainda</h1>
-                  </td>
-               </tr>
-            </tbody> -->
+            <tbody></tbody>
          </table>
       </section>
    </main>
+
+   <script type="module" src="./js/index.js"></script>
 </body>
 </html>
